# 04-2024-Hackathon-dashers

./: README.md  input.json  pyproject.toml
Container-Loading-Problem-master/: PackingAlgorithm.py  README.md  Visualization.py  boxes.py  create_dataset.py  input.json  main.py  requirements.txt
Container-Loading-Problem-master/PS0/: R1_0.html  R1_1.html  R1_10.html  R1_11.html  R1_12.html  R1_13.html  R1_14.html  R1_15.html  R1_16.html  R1_17.html  R1_18.html  R1_19.html  R1_2.html  R1_20.html  R1_21.html  R1_22.html  R1_23.html  R1_24.html  R1_25.html  R1_26.html  R1_27.html  R1_28.html  R1_29.html  R1_3.html  R1_30.html  R1_31.html  R1_32.html  R1_33.html  R1_34.html  R1_35.html  R1_36.html  R1_37.html  R1_38.html  R1_39.html  R1_4.html  R1_5.html  R1_6.html  R1_7.html  R1_8.html  R1_9.html  (+1 more)
Dashboard/dashboard/: package-lock.json  package.json
Dashboard/dashboard/app/dashboard/: page.tsx  test.tsx
PS0/: R1_0.html  R1_1.html  R1_2.html  R1_3.html  R1_4.html  R1_5.html  R1_6.html  TrueSolution.html
backend/: api.py  camera-feed.py
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/app/dashboard/: page.tsx  test.tsx
dashboard/app/dashboard/_components/: displayContainer.tsx  simulation.tsx  streaming.tsx  streaming2.tsx  taskList.tsx  videoCapture.tsx
measure_object_size/: box_render.py  measure_object_size.py  measure_object_size_camera.py
route_planning/: dijkstra_map.py  requirements.txt  route_planning.ipynb
