[tool.poetry]
name = "space optimization ethical spectacle hackathon"
version = "0.1.0"
description = "Space Optimization Ethical Spectacle Hackathon"
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
