[tool.poetry]
name = "space optimization ethical spectacle hackathon"
version = "0.1.0"
description = "Space Optimization Ethical Spectacle Hackathon"
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
opencv-python-headless = "^4.9.0.80"
aiortc = "^1.8.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
